# Sudoku

./: .gitignore  CMakeLists.txt
source/: main.cpp
source/diagrams/: general_diagrams
source/handle_elements/: SBoard.cpp  SBoard.h  SBoardGenerator.cpp  SBoardGenerator.h  SCellFlyweight.cpp  SCellFlyweight.h  SChunkPlayer.cpp  SChunkPlayer.h  SLittleCell.cpp  SLittleCell.h  SMusicPlayer.cpp  SMusicPlayer.h  SSudokuSolver.cpp  SSudokuSolver.h  STimer.cpp  STimer.h
source/renderer/: SFont.cpp  SFont.h  STexture.cpp  STexture.h
source/resources/: InitExitManager.cpp  InitExitManager.h  constants.h
source/widget/: SApplication.cpp  SApplication.h  SButton.cpp  SButton.h  SChooseLevelDialog.cpp  SChooseLevelDialog.h  SExitGameDialog.cpp  SExitGameDialog.h  SGameEnvironment.cpp  SGameEnvironment.h  SGameLevelLabel.cpp  SGameLevelLabel.h  SRulesButton.cpp  SRulesButton.h  SScoreLabel.cpp  SScoreLabel.h  STimerLabel.cpp  STimerLabel.h  SVoiceButton.cpp  SVoiceButton.h  SWidget.cpp  SWidget.h
